--- a/package.json
+++ b/package.json
@@ -14,14 +14,25 @@
   },
   "scripts": {
     "start:dev": "craco start",
-     "build": "craco build",
-     "test": "craco test",
-    "eject": "react-scripts eject"
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src/**/*.{js,jsx,ts,tsx}",
+    "lint:fix": "eslint ./src/**/*.{js,jsx,ts,tsx} --fix",
+    "pretty:code": "prettier src/**/*.tsx --write"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [""],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -38,7 +49,24 @@
   },
   "devDependencies": {
     "autoprefixer": "9",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "postcss": "7",
+    "prettier": "^2.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "eslint ./src/**/*.{js,jsx,ts,tsx} --fix"
+    ]
   }
 }
