--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/**/*.{js,jsx,ts,tsx}",
-    "lint:fix": "eslint ./src/**/*.{js,jsx,ts,tsx} --fix",
+    "lint:fix": "eslint ./src/**/*.{js,jsx,ts,tsx} --fix"
   },
   "eslintConfig": {
     "extends": [
