--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
@@ -27,7 +28,9 @@
     ],
     "overrides": [
       {
-        "files": [""],
+        "files": [
+          ""
+        ],
         "rules": {
           "import/no-anonymous-default-export": "off"
         }
